--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: ""
-    url: 
+  - title: "Publications"
+    url: /publications/
 
-  - title: ""
-    url:     
-
-  - title: ""
-    url:   
+  - title: "Talks"
+    url: /talks/      
     
-  - title: ""
-    url: 
+  - title: "Portfolio"
+    url: /portfolio/
         
-  - title: ""
-    url: 
+  - title: "Blog Posts"
+    url: /year-archive/
     
-  - title: ""
-    url: 
+  - title: "CV"
+    url: /cv/
     
-  - title: ""
-    url: 
+  - title: "Guide"
+    url: /markdown/
